# nlrs

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  mkdocs.yml  pyproject.toml  setup.py
docs/linear_model/: base.md  linear.md  svm.md
docs/objectives/: losses.md  regularizers.md
docs/solvers/: base.md
docs/utils/: selection.md  validation.md
examples/: adaptive_lasso.py  multitask_lasso.py  multitask_svr.py
src/nlrs/: __init__.py
src/nlrs/linear_model/: __init__.py  base.py  linear.py  svm.py
src/nlrs/objectives/: __init__.py  losses.py  regularizers.py
src/nlrs/solvers/: __init__.py  base.py
src/nlrs/utils/: __init__.py  selection.py  validation.py
tests/: test_AdaptiveWeights.py  test_adaptive.py  test_adaptive_advanced.py  test_collinear.py  test_edge_cases.py  test_linear.py  test_losses.py  test_multitask.py  test_multitask_advanced.py  test_regularizers.py  test_sklearn_compat.py  test_svm.py  test_validation.py
