[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlrs"
version = "0.1.0"
authors = [
    { name = "Thomas R. Holy", email = "th0ly96@gmail.com" }
]
description = "This package provides Non-standard Linear Regression methods with Sparsity."
readme = "README.md"
keywords = [
    "linear regression",
    "sparsity",
    "machine learning",
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
]

requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.5.1",
    "scikit-learn>=1.2.2",
    "numpy>=1.24.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "ruff>=0.9.6",
    "asgl",
]

[project.urls]
homepage = "https://github.com/trholy/nlrs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
line-length = 88
src = ["src"]
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "F",  # pyflakes
    "ISC", # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF", # ruff-specific rules
]
ignore = ["E203", "ISC001", "ISC002", "E111", "E114", "E117", "F401"] # rules redundant with the formatter

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.pycodestyle]
max-line-length = 320

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
